--- a/views/sale_view.xml
+++ b/views/sale_view.xml
@@ -25,6 +25,17 @@
         </field>
     </record>
 
+    <record id="zippin_delivery_carrier_form" model="ir.ui.view">
+        <field name="name">zipping.delivery.carrier.form</field>
+        <field name="model">delivery.carrier</field>
+        <field name="inherit_id" ref="delivery.view_delivery_carrier_form" ></field>
+	<field name="arch" type="xml">
+		<field name="company_id" position="after">
+			<field name="is_free" />
+		</field>
+        </field>
+    </record>
+
 
 
 </odoo>
