--- a/views/sale_view.xml
+++ b/views/sale_view.xml
@@ -12,27 +12,30 @@
         </field>
     </record>
 
-
     <record id="zippin_log_sale_order_form" model="ir.ui.view">
         <field name="name">zipping.log.sale.order.form</field>
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_form" ></field>
-	<field name="arch" type="xml">
-		<xpath expr="//notebook" position="inside">
-			<page string="Log Zipping" groups="base.group_no_one">
-				<br />
-				<group>
-					<field name="zippin_log_ids" readonly="1" >
-						<tree>
-							<field name="dt_llamada" />
-							<field name="llamada" />
-							<field name="request" />
-							<field name="response" optional="hide"/>
-						</tree>	
-					</field>
-				</group>
-			</page>
-		</xpath>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+		<field name="arch" type="xml">
+			<field name="validity_date" position="after">
+				<field name="zippin_estimated_delivery" widget="date" options="{'format': 'dd/MM/yyyy'}"/>
+			</field>
+
+			<xpath expr="//notebook" position="inside">
+				<page string="Log Zipping" groups="base.group_no_one">
+					<br/>
+					<group>
+						<field name="zippin_log_ids" readonly="1" >
+							<tree>
+								<field name="dt_llamada" />
+								<field name="llamada" />
+								<field name="request" />
+								<field name="response" optional="hide"/>
+							</tree>
+						</field>
+					</group>
+				</page>
+			</xpath>
         </field>
     </record>
 
