[upd] falta agregar datos al chatter

--- a/views/website_sale_view.xml
+++ b/views/website_sale_view.xml
@@ -4,10 +4,15 @@
         <xpath expr="//div[@id='informations']" position="inside">
             <div class="row mt16">
                 <div class="col-12">
-                    <strong for="estimated_delivery" >Entrega estimada: </strong>
-                    <span  id="estimated_delivery" t-field="sale_order.zippin_estimated_delivery" t-options="{ 'widget': 'date' }"/>
+                    <strong for="estimated_delivery">Entrega estimada: </strong>
+                    <span>
+                        <t t-esc="sale_order.zippin_min_date.strftime('%d/%m/%Y')"/> - 
+                        <t t-esc="sale_order.zippin_max_date.strftime('%d/%m/%Y')"/>
+                    </span>
                 </div>
             </div>
         </xpath>
     </template>
 </odoo>
+
+
