--- a/reports/estimated_delivery_report.xml
+++ b/reports/estimated_delivery_report.xml
@@ -5,9 +5,14 @@
             <div class="row">
                 <div class="col-auto col-12 mw-100 mb-2">
                     <strong style="color: #2B5078;">Entrega estimada: </strong>
-                    <p t-field="doc.zippin_estimated_delivery" t-options="{ 'widget': 'date' }"/>
+                    <p>
+                        <t t-esc="doc.zippin_min_date.strftime('%d/%m/%Y')"/> - <t t-esc="doc.zippin_max_date.strftime('%d/%m/%Y')"/>
+                    </p>
                 </div>
             </div>
         </xpath>
     </template>
 </odoo>
+
+
+
