--- a/views/sale_view.xml
+++ b/views/sale_view.xml
@@ -17,21 +17,30 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
 		<field name="arch" type="xml">
-			<field name="validity_date" position="after">
+			<!-- <field name="validity_date" position="after">
 				<field name="zippin_estimated_delivery" widget="date" options="{'format': 'dd/MM/yyyy'}"/>
-			</field>
+			</field> -->
 
 			<xpath expr="//group[@name='sale_shipping']" position="inside">
 				<label for="zippin_min_date"/>
 				<div class="o_row">
-					<field name="zippin_min_date"/>
+					<field name="zippin_min_date" widget="date" options="{'format': 'dd/MM/yyyy'}"/>
 				</div>
-				<label for="zippin_max_date"/>
+				<label for="zippin_max_date" />
 				<div class="o_row">
-					<field name="zippin_max_date"/>
+					<field name="zippin_max_date" widget="date" options="{'format': 'dd/MM/yyyy'}"/>
 				</div>
 			</xpath>
-			
+
+			<field name="commitment_date" position="attributes">
+				<attribute name="widget">date</attribute>
+				<attribute name="options">{'datepicker': {'format': 'dd/MM/yyyy'}}</attribute>
+			</field>
+			<field name="date_order" position="attributes">
+				<attribute name="widget">date</attribute>
+				<attribute name="options">{'datepicker': {'format': 'dd/MM/yyyy'}}</attribute>
+			</field>
+
 			<xpath expr="//notebook" position="inside">
 				<page string="Log Zipping" groups="base.group_no_one">
 					<br/>
@@ -55,11 +64,11 @@
         <field name="name">zipping.delivery.carrier.form</field>
         <field name="model">delivery.carrier</field>
         <field name="inherit_id" ref="delivery.view_delivery_carrier_form" ></field>
-	<field name="arch" type="xml">
-		<field name="company_id" position="after">
-			<field name="is_free" />
-		</field>
+		<field name="arch" type="xml">
+			<field name="company_id" position="after">
+				<field name="is_free" />
+			</field>
         </field>
     </record>
-	
+
 </odoo>
