--- a/reports/estimated_delivery_report.xml
+++ b/reports/estimated_delivery_report.xml
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-auto col-12 mw-100 mb-2">
                     <strong style="color: #2B5078;">Entrega estimada: </strong>
-                    <p>
+                    <p t-if="doc.zippin_min_date not in ('', False) and doc.zippin_max_date not in ('', False)">
                         <t t-esc="doc.zippin_min_date.strftime('%d/%m/%Y')"/> - <t t-esc="doc.zippin_max_date.strftime('%d/%m/%Y')"/>
                     </p>
                 </div>
