--- a/zippin_shipping/views/sale_view.xml
+++ b/zippin_shipping/views/sale_view.xml
@@ -17,9 +17,38 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
 		<field name="arch" type="xml">
-			<!-- <field name="validity_date" position="after">
-				<field name="zippin_estimated_delivery" widget="date" options="{'format': 'dd/MM/yyyy'}"/>
-			</field> -->
+
+			<header>
+				<field name="zippin_create_shipping_view" invisible="1"/>
+				<field name="zippin_create_label_view" invisible="1"/>
+				<button type="object" name="action_zippin_create_shipping" string="Crear envío con Zippin" 
+					attrs="{'invisible':[('zippin_create_shipping_view', '=', True)]}" />
+				<button type="object" name="action_zippin_get_label" string="Generar etiqueta Zippin" 
+					attrs="{'invisible':[('zippin_create_label_view', '=', True)]}" />
+			</header>
+			<data>
+				<notebook>
+					<page string="Zippin">
+						<group>
+							<field name="zippin_shipping_label_bin" filename="zippin_shipping_label_filename" />
+							<field name="zippin_pickup_order_id" />
+							<field name="zippin_pickup_carrier_id" />
+							<field name="zippin_pickup_is_pickup" />
+							<field name="zippin_pickup_point_id" />
+							<field name="zippin_pickup_name" />
+							<field name="zippin_pickup_address" />
+							<field name="zippin_logistic_type" />     
+							<field name="zippin_shipping_id" readonly="1" />    
+							<field name="zippin_shipping_delivery_id" readonly="1" />   
+							<field name="zippin_shipping_carrier_tracking_id" readonly="1" /> 
+							<field name="zippin_shipping_carrier_tracking_id_alt" readonly="1" /> 
+							<field name="zippin_shipping_tracking" readonly="1" /> 
+							<field name="zippin_shipping_tracking_external" readonly="1" />
+							<field name="zippin_shipping_label_filename" invisible="1" />
+						</group>
+					</page>
+				</notebook>
+			</data>
 
 			<xpath expr="//group[@name='sale_shipping']" position="inside">
 				<label for="zippin_min_date"/>
@@ -65,6 +94,25 @@
         <field name="model">delivery.carrier</field>
         <field name="inherit_id" ref="delivery.view_delivery_carrier_form" ></field>
 		<field name="arch" type="xml">
+			<field name="integration_level" position="after">
+                <field name="zippin_shipment" />
+            </field>
+            <notebook position="inside">
+                <page
+                    name="page_zippin"
+                    string="Zippin"
+                    attrs="{'invisible': [('zippin_shipment', '=', False)]}">
+                    <group name="group_zippin">
+                        <group colspan="4" col="4">
+                            <field
+                                name="zippin_shipment_type"
+                                attrs="{'required':[('zippin_shipment','=',True)]}"
+                            />
+                            <field name="zippin_shipment_type_is_pickup" />
+                        </group>
+                    </group>
+                </page>
+            </notebook>
 			<field name="company_id" position="after">
 				<field name="is_free" />
 			</field>
