--- a/zippin_shipping/wizard/choose_delivery_carrier_form_view.xml
+++ b/zippin_shipping/wizard/choose_delivery_carrier_form_view.xml
@@ -13,6 +13,14 @@
                         </button>
                     </div>
                 </xpath>
+
+                <xpath expr="//field[@name='carrier_id']" position="after">
+                    <field name="zippin_pickup_view_invisible" invisible="1"/>
+                    <field name="zippin_pickup_view_id" invisible="1"/>
+                    <field name="zippin_pickup" attrs="{'invisible':[('zippin_pickup_view_invisible', '=', True)]}"
+                        domain="[('carrier_id','=', zippin_pickup_view_id),('order_id', '=', order_id)]"/>
+                </xpath>
+
             </field>
         </record>
     </data>
