--- a/zippin_shipping/views/res_company.xml
+++ b/zippin_shipping/views/res_company.xml
@@ -10,10 +10,10 @@
                     <notebook>
                         <page string="Zippin">
                             <group>
-                                <field name="zippin_id" />
-                                <field name="zippin_description_web" />
-                                <field name="zippin_key" />
-                                <field name="zippin_secret" />
+                                <field name="zippin_id" placeholder="Ingrese el ID de Zippin (solo números)"/>
+                                <field name="zippin_description_web" placeholder="Ingrese el identificador de Zippin (sin espacios)"/>
+                                <field name="zippin_key" placeholder="Ingrese la public key de Zippin"/>
+                                <field name="zippin_secret" placeholder="Ingrese la secret key de Zippin"/>
                             </group>
                         </page>
                     </notebook>
